forget python setup

--- a/.github/workflows/hello.yaml
+++ b/.github/workflows/hello.yaml
@@ -10,6 +10,11 @@ jobs:
     # Set the type of machine to run on
     runs-on: ubuntu-latest
     steps:
+      - name: Set up Python 3.x
+        uses: actions/setup-python@v2
+        with:
+          python-version: '3.x'
+          architecture: 'x64'
       - name: Configuring Python packages
         run: |
           python -c "import sys; print(sys.version)"
